<resources>
    <string name="app_name">音量调节</string>
    <string name="description">可以通过以下按钮调节电话、闹钟、多媒体等音量</string>
    <string name="increase_music">增大媒体音量</string>
    <string name="decrease_music">减小媒体音量</string>
    <string name="increase_alarm">增大闹钟音量</string>
    <string name="decrease_alarm">减小闹钟音量</string>
    <string name="increase_ring">增大铃声音量</string>
    <string name="decrease_ring">减小铃声音量</string>
    <string name="increase_system">增大系统音量</string>
    <string name="decrease_system">减小系统音量</string>
    <string name="increase_call">增大通话音量</string>
    <string name="decrease_call">减小通话音量</string>
</resources>