<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textColor="#000000"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/increase_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/increase_music" />

        <Button
            android:id="@+id/decrease_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decrease_music" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/increase_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/increase_alarm" />

        <Button
            android:id="@+id/decrease_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decrease_alarm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/increase_ring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/increase_ring" />

        <Button
            android:id="@+id/decrease_ring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decrease_ring" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/increase_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/increase_call" />

        <Button
            android:id="@+id/decrease_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decrease_call" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/increase_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/increase_system" />

        <Button
            android:id="@+id/decrease_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decrease_system" />
    </LinearLayout>

</LinearLayout>